--- a/styles/certificates.css
+++ b/styles/certificates.css
@@ -29,7 +29,7 @@
 }
 
 .carousel-slide img {
-    width: 400px;
+    width: 100%;
     height: auto;
     border-radius: 10px;
     transition: transform 0.3s ease-in-out;
