--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,5 +1,5 @@
 .hero-title {
-    margin-bottom: 20px;
+    padding-top: 20px;
     font-size: 48px;
     position: relative;
     transition: transform 0.3s ease-out;
@@ -36,8 +36,8 @@ h2.write {
 }
 
 .profile-img {
-    width: 550px;
-    height: 550px;
+    width: 400px;
+    height: 400px;
     border-radius: 50%;
     object-fit: cover;
     border: 8px solid linear-gradient(135deg, #36454F, #2C3E50, #4F5D75);;
